# PathTracer

./: .clangd  .gitignore  CMakeLists.txt  README.md  TODO.md  cloc_ignore  compile_commands.json  image_visualizer.py  loc.sh
.cache/clangd/index/: aabb.hpp.A7A97605FE21E96C.idx  bvh.hpp.F5D9E679A4C0B37B.idx  camera.cpp.E13E1EB90D49AC5A.idx  camera.hpp.A5FEDFADFB06C886.idx  framebuffer.cpp.1DB58AF0B4C06C8F.idx  framebuffer.hpp.65ADDBFA6CC95E6B.idx  light.cpp.40120A228BCF068C.idx  light.hpp.675A1522366761B4.idx  lightList.hpp.895878B79B3C30A7.idx  material.hpp.EB7CA4DD400BC77B.idx  matrix.hpp.43F0D60B3CB2229B.idx  object3D.cpp.7F6F2F0AED43901D.idx  object3D.hpp.B810608BFDE7228C.idx  objectList.cpp.329CE61AEB25EDFE.idx  objectList.hpp.BCDA06D759E6BA4D.idx  primitive.cpp.240D7280FE97841D.idx  primitive.hpp.B01F1841A8C908E8.idx  quat.hpp.835CC0EA9D648A8A.idx  ray.hpp.835A636BA9ED5944.idx  raytracer.cpp.104220F25328B2A5.idx  scene_io.cpp.AF0D8A696E8A5274.idx  scene_io.hpp.40BD377F138C0442.idx  sse2neon.h.F681C59A863E4929.idx  stb_image.h.25E195DC87CEBBB7.idx  stb_image_write.h.8EBF05F195AEBB14.idx  timeit.hpp.CAC90C260DE39876.idx  transformations.hpp.4771B5781D804842.idx  unit_test.cpp.B3D3B61DF889ED40.idx  unit_test.hpp.A944E66FB9AE9D21.idx  utility.hpp.C6D330CFBDF04ECD.idx  vertex.hpp.1BD52683D0DB971F.idx  whitted.hpp.CB17274F6853B4AB.idx
Scenes/: part.ascii
Scenes/Scenes_HW2/: test2.ascii  test6.ascii
Scenes/Scenes_HW3/: test2.ascii
Scenes_2/: minimal.ascii  test1.ascii
Scenes_HW2/: custom.ascii
assets/: mccree.fbx
cmake/: FindFBX.cmake
include/: config.hpp  header.hpp  test_header.hpp
include/PDF/: clearcoatPDF.hpp  hairPDF.hpp  hittablePDF.hpp  mfDielectricPDF.hpp  mfPDF.hpp
include/base/: camera.hpp  colors.hpp  framebuffer.hpp  light.hpp  lightDiscovery.hpp  lightList.hpp  medium.hpp  object3D.hpp  objectList.hpp  primitive.hpp  ray.hpp  texture.hpp  vertex.hpp
include/deprecated/: mediumRTOWK.hpp  whittedLights.hpp  whittedMaterials.hpp  whittedRT.hpp
include/integrator/: analytical_illumin.hpp  maxdepth_mis.hpp  maxdepth_naive.hpp  maxdepth_nee.hpp  maxdepth_reservoir_di.hpp  maxdepth_volume.hpp  roulette_naive.hpp
include/light/: envLight.hpp  light.hpp
include/material/: commonMaterials.hpp  conductor.hpp  dielectric.hpp  disneyClearcoat.hpp  disneyDiffuse.hpp  disneyGlass.hpp  disneyMetal.hpp  disneyPrincipledBSDF.hpp  disneySheen.hpp  hairMarsch.hpp  material.hpp  materialBase.hpp  materialFlags.hpp  materialMath.hpp  materialTemplate.hpp  raySplitDispersion.hpp  simpleDispersion.hpp  thinDielectric.hpp
include/medium/: homogeneous.hpp  medium.hpp  mediumBase.hpp  phaseFunction.hpp  phaseMath.hpp
include/mesh_io/: fbxLoader.hpp  meshData.hpp  meshLoader.hpp
include/primitives/: bezier.hpp  box.hpp  bvh.hpp  curve.hpp  meshBVH.hpp  triangleMesh.hpp
include/probs/: clearcoatPDF.hpp  hairPDF.hpp  mfDielectricPDF.hpp  mfPDF.hpp  pdf.hpp
include/render/: renderManager.hpp  scenes.hpp  whitted.hpp
include/render_method/: analytical_illumin.hpp  maxdepth_mis.hpp  maxdepth_nee.hpp  maxdepth_reservoir_di.hpp  maxdepth_vol.hpp  ray_split_dispersion.hpp
include/sampler/: digitPerm.hpp  sampler.hpp
include/scenes/: scenes_01.hpp  scenes_02.hpp  scenes_hdri.hpp  scenes_medium.hpp
include/texture/: texture.hpp
include/utils/: aabb.hpp  constants.hpp  hash.hpp  matrix.hpp  objectTransform.hpp  orthoBasis.hpp  plane.hpp  random.hpp  timeit.hpp  transformations.hpp  utility.hpp
src/: BasicRayTracer.vcproj  CMakeLists.txt  config.hpp  main.cpp  pathtracer.cpp  raytracer.cpp  unit_test.cpp  unit_test.hpp
src/PDF/: hairPDF.cpp
src/base/: SceneManager.hpp  camera.cpp  camera.hpp  compound.hpp  frame.hpp  framebuffer.cpp  framebuffer.hpp  light.cpp  light.hpp  lightList.hpp  material.hpp  materialBase.hpp  materialFlags.hpp  materialMath.hpp  medium.hpp  object3D.cpp  objectList.cpp  objectList.hpp  primitive.cpp  primitive.hpp  ray.hpp  rayCalc.hpp  texture.cpp  texture.hpp  vertex.hpp
src/deprecated/: light.cpp  raytracer.cpp  whitted.hpp
src/material/: conductor.hpp  dielectric.hpp  disneyPrincipledBSDF.cpp  hairMarsch.cpp  hairMarsch.hpp  simpleDispersion.hpp  thinDielectric.hpp
src/mesh_io/: fbxLoader.cpp  meshData.hpp  meshLoader.cpp  meshLoader.hpp
src/method/: analytical_illumin.hpp  config.hpp  maxdepth_analytical.hpp  maxdepth_mis.hpp  maxdepth_naive.hpp  maxdepth_nee.hpp  maxdepth_reservoir_di.hpp  maxdepth_shadowray.hpp  maxdepth_tracer.hpp  pathtracing.hpp  roulette_naive.hpp  whitted.hpp
src/primitives/: box.hpp  curve.hpp  meshBVH.cpp  meshBVH.hpp  triangleMesh.cpp  triangleMesh.hpp
src/probs/: hairPDF.cpp  hairPDF.hpp  hittablePDF.hpp  mfDielectricPDF.hpp  mfPDF.hpp  mixedPDF.hpp  pdf.hpp  random.hpp
src/render/: renderManager.hpp  scenes.hpp
src/render_method/: analytical_illumin.hpp  maxdepth_mis.hpp  maxdepth_naive.hpp  maxdepth_nee.hpp  maxdepth_reservoir_di.hpp  roulette_naive.hpp
src/sampler/: digitPerm.hpp  sampler.cpp  sampler.hpp
src/scene_func/: renderManager.hpp  scenes.hpp
src/test/: hairPDFTest.hpp
src/texture/: texture.cpp
src/utils/: aabb.hpp  adapter.hpp  bezier.hpp  bvh.hpp  colors.hpp  commonMaterials.hpp  matrix.hpp  objectTransform.cpp  objectTransform.hpp  orthoBasis.hpp  pattern.hpp  scene_io.cpp  scene_io.hpp  timeit.h  timeit.hpp  transformations.hpp  utility.hpp
tests/: CMakeLists.txt  pdf_test.hpp  test_dielectric.cpp  test_hair_pdf.cpp  test_halton.cpp  test_mesh_io.cpp  test_mf_distrib.cpp  test_pdf_normalization.cpp  test_refract.cpp
tests/deprecated/: unit_test.cpp
